--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -5,7 +5,7 @@
    "id": "cda8efd8-92ef-4320-a221-cac67b6c3ba5",
    "metadata": {},
    "source": [
-    "# Example for using dbscan_ot module\n",
+    "# Example for using scotia module\n",
     "## This notebook includes:\n",
     "### 1) DBSCAN clustering of cells\n",
     "### 2) Visualization of clustered cells\n",
@@ -25,14 +25,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import scotia\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
     "from scipy.spatial import distance_matrix\n",
     "from scipy.stats import ranksums\n",
     "from matplotlib.collections import LineCollection\n",
     "from statsmodels.stats.multitest import multipletests\n",
-    "#import imp\n",
-    "#imp.reload(dbscan_ot)\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import sys"
@@ -51,18 +50,6 @@
     "    except:\n",
     "        df = pd.DataFrame()\n",
     "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "fa2d11b0-bc9d-4063-9435-1f3b2c110081",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#insert the directory of dbscan_ot module\n",
-    "sys.path.insert(0, 'your_path_for_dbscan_ot_py_module')\n",
-    "import dbscan_ot"
    ]
   },
   {
@@ -265,7 +252,7 @@
     "        X = np.array(meta_df_sel[['x_positions','y_positions']])\n",
     "        if X.shape[0] >= 5:\n",
     "            print(ct)\n",
-    "            cluster_l, idx_l, fi_eps = dbscan_ot.bdscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_l = list(range(10,50,1)))\n",
+    "            cluster_l, idx_l, fi_eps = scotia.bdscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_l = list(range(10,50,1)))\n",
     "            if len(cluster_l)>0:\n",
     "                celltype += [ct for x in cluster_l]\n",
     "                cell_idx += idx_l\n",
@@ -456,17 +443,17 @@
     "    exp_df_fov.index = cell_id_all\n",
     "\n",
     "    #select potentially communicating cell cluster pairs (spatially adjacent)\n",
-    "    S_all_arr_new = dbscan_ot.sel_pot_inter_cluster_pairs(S_all_arr,cluster_df)\n",
+    "    S_all_arr_new = scotia.sel_pot_inter_cluster_pairs(S_all_arr,cluster_df)\n",
     "\n",
     "    #optimal transport between source and target cells\n",
-    "    ga_df_final = dbscan_ot.source_target_ot(S_all_arr_new, exp_df_fov, meta_df_fov, known_lr_pairs)\n",
+    "    ga_df_final = scotia.source_target_ot(S_all_arr_new, exp_df_fov, meta_df_fov, known_lr_pairs)\n",
     "    if ga_df_final.shape[0]>0:\n",
     "        ga_df_final.columns = ['source_cell_idx','receptor_cell_idx','likelihood','ligand_recptor','source_cell_type','target_cell_type']\n",
     "        ga_df_final.to_csv(datap+'example/output/ot/'+group+'_fov_'+str(fov)+\".ot.csv\",header = True, index = False, sep = \"\\t\")\n",
     "\n",
     "        #post-processing of ot results by calculating averaged likelihoods\n",
     "        ga_df_final['cell_pairs'] = ga_df_final['source_cell_type']+\"_\"+ga_df_final['target_cell_type']\n",
-    "        final_summary = dbscan_ot.post_ot(ga_df_final,label=group)\n",
+    "        final_summary = scotia.post_ot(ga_df_final,label=group)\n",
     "        final_summary.to_csv(datap+'example/output/ot/summary/'+group+'_fov_'+str(fov)+\".ot.csv\",header = True, index = False, sep = \"\\t\")\n",
     "    "
    ]
@@ -726,10 +713,10 @@
     "    exp_df_fov.index = cell_id_all\n",
     "\n",
     "    #get permutated positions and expression\n",
-    "    random_pos, shuffled_exp = dbscan_ot.permutation_test(coord,int(it_n))\n",
+    "    random_pos, shuffled_exp = scotia.permutation_test(coord,int(it_n))\n",
     "\n",
     "    #select potentially communicating cell cluster pairs (spatially adjacent)\n",
-    "    S_all_arr_new = dbscan_ot.sel_pot_inter_cluster_pairs(S_all_arr,cluster_df)\n",
+    "    S_all_arr_new = scotia.sel_pot_inter_cluster_pairs(S_all_arr,cluster_df)\n",
     "    \n",
     "    final_summary = pd.DataFrame([])\n",
     "    for i_n in range(int(it_n)):\n",
@@ -741,7 +728,7 @@
     "        S_all_arr_permu = S_all_arr_permu\n",
     "        \n",
     "        #optimal transport\n",
-    "        ga_df_permu = dbscan_ot.source_target_ot(S_all_arr_permu, exp_df_permu, meta_df_fov, known_lr_pairs)\n",
+    "        ga_df_permu = scotia.source_target_ot(S_all_arr_permu, exp_df_permu, meta_df_fov, known_lr_pairs)\n",
     "        \n",
     "        if ga_df_permu.shape[0]>0:\n",
     "            ga_df_permu.columns = ['source_cell_idx','receptor_cell_idx','likelihood','ligand_recptor','source_cell_type','target_cell_type']\n",
@@ -750,7 +737,7 @@
     "\n",
     "            #post-processing ot results by calculating averaged likelihoods\n",
     "            ga_df_permu['cell_pairs'] = ga_df_permu['source_cell_type']+\"_\"+ga_df_permu['target_cell_type']\n",
-    "            final_summary_tmp = dbscan_ot.post_ot(ga_df_permu, label=group, it_n_label = i_n)\n",
+    "            final_summary_tmp = scotia.post_ot(ga_df_permu, label=group, it_n_label = i_n)\n",
     "            final_summary = pd.concat([final_summary,final_summary_tmp])\n",
     "    \n",
     "    final_summary.to_csv(datap+'example/output/permutation/summary/'+group+'_fov_'+str(fov)+\".permu.csv\",header = True, index = False, sep = \"\\t\")"
@@ -927,7 +914,7 @@
     "\n",
     "            G = list(df_sel['likelihood'])\n",
     "            ax = plt.axes()\n",
-    "            all_curves = dbscan_ot.curved_edges(l_pos,r_pos)\n",
+    "            all_curves = scotia.curved_edges(l_pos,r_pos)\n",
     "            for n,i in enumerate(list(range(l_pos.shape[0]))):\n",
     "                lc = LineCollection([all_curves[i]], colors='black',alpha = np.min([G[n]/np.quantile(G,q=0.9),1]), zorder=0)\n",
     "                ax.add_collection(lc)\n",
@@ -962,9 +949,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-ssam]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-anaconda3-ssam-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -976,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
