--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -721,7 +721,7 @@
     "    final_summary = pd.DataFrame([])\n",
     "    for i_n in range(int(it_n)):\n",
     "        exp_df_permu = exp_df_fov.loc[list(shuffled_exp.iloc[:,i_n])]\n",
-    "        coord_permu = np.array(random_pos.iloc[:,i_n:i_n+2])\n",
+    "        coord_permu = np.array(random_pos.iloc[:,i_n*2:i_n*2+2])\n",
     "        S_all_arr_permu = distance_matrix(coord_permu,coord_permu)\n",
     "        mask = np.where(S_all_arr_new==np.inf)\n",
     "        S_all_arr_permu[mask] = np.inf\n",
