--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -9,10 +9,10 @@
     "## This notebook includes:\n",
     "### 1) DBSCAN clustering of cells\n",
     "### 2) Visualization of clustered cells\n",
-    "### 2) Optimal transport between cell clusters\n",
-    "### 3) Wilcoxon tests of LR pairs\n",
-    "### 4) Permutation tests of LR pairs\n",
-    "### 5) Visualization of LR pairs in FOVs"
+    "### 3) Optimal transport between cell clusters\n",
+    "### 4) Wilcoxon tests of LR pairs\n",
+    "### 5) Permutation tests of LR pairs\n",
+    "### 6) Visualization of LR pairs in FOVs"
    ]
   },
   {
@@ -61,6 +61,14 @@
    "source": [
     "#set your workspace directory\n",
     "datap = 'your_workspace_path'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acf240e8",
+   "metadata": {},
+   "source": [
+    "### load input: metatable, count matrix, ligand-receptor pairs"
    ]
   },
   {
@@ -120,6 +128,14 @@
     "known_lr_pairs = pd.read_csv(datap+'example/lr_gene.list', sep = '\\t', header = None, index_col = None)\n",
     "known_lr_pairs.columns = ['l_gene','r_gene']\n",
     "print(known_lr_pairs.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf072b36",
+   "metadata": {},
+   "source": [
+    "### DBSCAN clustering of cells"
    ]
   },
   {
@@ -261,6 +277,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ce4fe9b",
+   "metadata": {},
+   "source": [
+    "### Visualization of clustered cells"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "efb88e7b-4b89-4b3c-bcc2-26768246833f",
@@ -352,6 +376,7 @@
    ],
    "source": [
     "#visualization of DBSCAN clustering result\n",
+    "#legend: each dot is a cell, cells of the same color are from the same cluster, cells in the grey color are the noise identified by DBSCAN\n",
     "#for fov in set(meta_df['fov']):\n",
     "for fov in [9]:\n",
     "    print(fov)\n",
@@ -379,6 +404,14 @@
     "            plt.scatter(X[:,0],X[:,1],color =colors[n],s = 15)\n",
     "        plt.savefig(datap+'example/output/Figs/'+group+'_fov_'+str(fov)+\"_\"+ct+\".cluster.pdf\", dpi=100, tansparent=True)\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e673ecee",
+   "metadata": {},
+   "source": [
+    "### Optimal transport between cell clusters"
    ]
   },
   {
@@ -456,6 +489,14 @@
     "        final_summary = scotia.post_ot(ga_df_final,label=group)\n",
     "        final_summary.to_csv(datap+'example/output/ot/summary/'+group+'_fov_'+str(fov)+\".ot.csv\",header = True, index = False, sep = \"\\t\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca60a0c9",
+   "metadata": {},
+   "source": [
+    "### Wilcoxon tests of LR pairs"
    ]
   },
   {
@@ -684,6 +725,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09da3b1d",
+   "metadata": {},
+   "source": [
+    "### Permutation tests of LR pairs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "id": "c61406f4-7aa9-48ba-8d8d-55a769551966",
@@ -837,6 +886,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f68b45d",
+   "metadata": {},
+   "source": [
+    "### Visualization of LR pairs in FOVs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
    "id": "83c8a6e3-fcc8-4f58-b4e6-07d46d86eecb",
@@ -862,6 +919,10 @@
    ],
    "source": [
     "#visualization of LR paris in FOVs\n",
+    "#Dots represent ligand gene expression in source cells (orange) or receptor gene expression in target cells (blue) with the size indicating normalized expression\n",
+    "#levels and the locations indicating spatial coordinates of cell centroids. Cells expressing ligands or receptors but not\n",
+    "#participating in interactions are shown as semi-transparent dots\n",
+    "\n",
     "group = 'mut'\n",
     "\n",
     "source_ct = 'Hepatocyte'\n",
