--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -299,9 +299,9 @@
     "        X = np.array(meta_df_sel[['x_positions','y_positions']])\n",
     "        if X.shape[0] >= 5:\n",
     "            print(ct)\n",
-    "            cluster_l, idx_l, fi_eps = scotia.dbscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_l = list(range(10,50,1)))\n",
-    "            if len(cluster_l)>0:\n",
-    "                celltype += [ct for x in cluster_l]\n",
+    "            idx_l, fi_eps = scotia.dbscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_l = list(range(10,50,1)))\n",
+    "            if len(idx_l)>0:\n",
+    "                celltype += [ct for x in idx_l]\n",
     "                cell_idx += idx_l\n",
     "    tmp_df = pd.DataFrame([celltype,cell_idx]).T\n",
     "    np.save(datap+'example/output/clustering/'+group+'_fov_'+str(fov)+'_dbscan.cell.clusters.test',tmp_df)"
