--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -60,8 +60,7 @@
    "outputs": [],
    "source": [
     "#set your workspace directory\n",
-    "datap = 'your_workspace_path'\n",
-    "datap = '/data/hemberg/jingyi/project/1.pdac/scripts/dbscan_ot_py/'"
+    "datap = 'your_workspace_path'"
    ]
   },
   {
@@ -812,7 +811,7 @@
     "        \n",
     "        if ga_df_permu.shape[0]>0:\n",
     "            ga_df_permu.columns = ['source_cell_idx','receptor_cell_idx','likelihood','ligand_recptor','source_cell_type','target_cell_type']\n",
-    "            ga_df_permu.to_csv(datap+'example/output/permutation/'+group+'_fov_'+str(fov)+\".permu.csv\",header = True, index = False, sep = \"\\t\")\n",
+    "            ga_df_permu.to_csv(datap+'example/output/permutation/'+group+'_fov_'+str(fov)+\".permu.\"+str(i_n)+\".csv\",header = True, index = False, sep = \"\\t\")\n",
     "\n",
     "\n",
     "            #post-processing ot results by calculating averaged likelihoods\n",
