--- a/notebook/scotia_example.ipynb
+++ b/notebook/scotia_example.ipynb
@@ -268,9 +268,13 @@
     "        #print(ct)\n",
     "        meta_df_sel = meta_df_fov[meta_df_fov['annotation']==ct]\n",
     "        X = np.array(meta_df_sel[['x_positions','y_positions']])\n",
+    "        #get the size of fov\n",
+    "        fov_size_x = meta_df_fov['x_pos'].max()-meta_df_fov['x_pos'].min()\n",
+    "        fov_size_y = meta_df_fov['y_pos'].max()-meta_df_fov['y_pos'].min()\n",
+    "        fov_size = np.max([fov_size_x,fov_size_y])\n",
     "        if X.shape[0] >= 5:\n",
     "            print(ct)\n",
-    "            idx_l, fi_eps = scotia.dbscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_l = list(range(10,50,1)))\n",
+    "            idx_l, fi_eps = scotia.dbscan_ff_cell(X, X_index_arr=np.array(meta_df_sel['index']),min_cluster_size=5,eps_range = list(range(10,int(fov_size),1)))\n",
     "            if len(idx_l)>0:\n",
     "                celltype += [ct for x in idx_l]\n",
     "                cell_idx += idx_l\n",
