--- a/notebook/scotia_example_anndata.ipynb
+++ b/notebook/scotia_example_anndata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "154c0df3-3703-4659-83d5-69144820c5ce",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "fbfaaef9",
    "metadata": {},
    "outputs": [],
    "source": [
     "#set your workspace directory\n",
-    "datap = 'your_workspace_path'"
+    "datap = '/data/hemberg/jingyi/project/1.pdac/scripts/dbscan_ot_py/'"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "1942d41d-5caf-49f1-9424-6bed0ac4c3aa",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "    obsm: 'spatial'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "bb9de4b5-8ea7-41bd-82fa-eac3dafb9d8c",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "3c080aa5-c36f-466b-92cf-ea904000565b",
    "metadata": {
     "tags": []
@@ -123,17 +123,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AEC\n",
-      "MK\n",
-      "Erythroidpro\n",
-      "eps: 24\n",
       "Erythroid\n",
       "eps: 17\n",
-      "Macrophage\n",
-      "Hepatocyte\n",
-      "eps: 28\n",
+      "AEC\n",
       "SEC\n",
       "eps: 35\n",
+      "Hepatocyte\n",
+      "eps: 28\n",
+      "Erythroidpro\n",
+      "eps: 24\n",
       "Myeloid\n",
       "WARNING: n_obs too small: adjusting to `n_neighbors = 4`\n",
       "WARNING: n_obs too small: adjusting to `n_neighbors = 4`\n",
@@ -194,6 +192,8 @@
       "WARNING: n_obs too small: adjusting to `n_neighbors = 4`\n",
       "WARNING: n_obs too small: adjusting to `n_neighbors = 4`\n",
       "WARNING: n_obs too small: adjusting to `n_neighbors = 4`\n",
+      "MK\n",
+      "Macrophage\n",
       "Processed mut FOV 9\n",
       "Results saved in datap/example/test_output/ot\n"
      ]
@@ -205,8 +205,7 @@
     "         sample_col = 'sample',\n",
     "         fov_col = 'fov',\n",
     "         celltype_col = 'annotation',\n",
-    "         output_path = datap+'example/test_output/')\n",
-    "print('Results saved in datap/example/test_output/ot')"
+    "         output_path = datap+'example/test_output/')"
    ]
   },
   {
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "959699bc-b9e1-4ab7-bc96-1189b166e8fd",
    "metadata": {},
    "outputs": [
@@ -387,7 +386,7 @@
        "[2084 rows x 6 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "b17adb6a-4d51-4249-8715-a5379586315a",
    "metadata": {},
    "outputs": [
@@ -567,7 +566,7 @@
        "[2084 rows x 6 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,6 +576,14 @@
     "summarized_ot = pd.read_csv(datap+'/example/test_output/ot/summary/mut_fov_9.ot.csv',sep='\\t',header=0)\n",
     "ot_result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c0e5fe-6018-4f23-b0d3-92218298217d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
