--- a/notebook/scotia_example_anndata.ipynb
+++ b/notebook/scotia_example_anndata.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "154c0df3-3703-4659-83d5-69144820c5ce",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "fbfaaef9",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "1942d41d-5caf-49f1-9424-6bed0ac4c3aa",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "    obsm: 'spatial'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "bb9de4b5-8ea7-41bd-82fa-eac3dafb9d8c",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "959699bc-b9e1-4ab7-bc96-1189b166e8fd",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "[2084 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "b17adb6a-4d51-4249-8715-a5379586315a",
    "metadata": {},
    "outputs": [
@@ -423,158 +423,96 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>source_cell_idx</th>\n",
-       "      <th>receptor_cell_idx</th>\n",
-       "      <th>likelihood</th>\n",
-       "      <th>ligand_recptor</th>\n",
-       "      <th>source_cell_type</th>\n",
-       "      <th>target_cell_type</th>\n",
+       "      <th>label</th>\n",
+       "      <th>ave_likelihood</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0.108347</td>\n",
-       "      <td>Angpt1_Tek</td>\n",
-       "      <td>Hepatocyte</td>\n",
-       "      <td>Erythroidpro</td>\n",
+       "      <td>Kitl_Kit|mut|Hepatocyte_Erythroidpro</td>\n",
+       "      <td>0.139075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>59</td>\n",
-       "      <td>0.031968</td>\n",
-       "      <td>Angpt1_Tek</td>\n",
-       "      <td>Hepatocyte</td>\n",
-       "      <td>SEC</td>\n",
+       "      <td>Jag2_Notch2|mut|Hepatocyte_Erythroidpro</td>\n",
+       "      <td>0.254418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0.064517</td>\n",
-       "      <td>Angpt1_Tek</td>\n",
-       "      <td>Hepatocyte</td>\n",
-       "      <td>SEC</td>\n",
+       "      <td>Dll4_Notch4|mut|Hepatocyte_Erythroidpro</td>\n",
+       "      <td>0.119644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.017489</td>\n",
-       "      <td>Angpt1_Tek</td>\n",
-       "      <td>Erythroidpro</td>\n",
-       "      <td>SEC</td>\n",
+       "      <td>Angpt2_Tek|mut|Hepatocyte_Erythroidpro</td>\n",
+       "      <td>0.043558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>16</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.206867</td>\n",
-       "      <td>Angpt1_Tek</td>\n",
-       "      <td>Erythroidpro</td>\n",
-       "      <td>Erythroid</td>\n",
+       "      <td>Jag1_Notch4|mut|Erythroidpro_Erythroid</td>\n",
+       "      <td>0.032999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2079</th>\n",
-       "      <td>147</td>\n",
-       "      <td>108</td>\n",
-       "      <td>0.562622</td>\n",
-       "      <td>Dll1_Notch2</td>\n",
-       "      <td>SEC</td>\n",
-       "      <td>Erythroidpro</td>\n",
+       "      <th>76</th>\n",
+       "      <td>Jag1_Notch3|mut|Erythroidpro_Erythroidpro</td>\n",
+       "      <td>0.068377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2080</th>\n",
-       "      <td>147</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0.072832</td>\n",
-       "      <td>Dll1_Notch2</td>\n",
-       "      <td>SEC</td>\n",
-       "      <td>Myeloid</td>\n",
+       "      <th>77</th>\n",
+       "      <td>Kitl_Kit|mut|Erythroidpro_Erythroidpro</td>\n",
+       "      <td>0.117084</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2081</th>\n",
-       "      <td>147</td>\n",
-       "      <td>119</td>\n",
-       "      <td>0.093348</td>\n",
-       "      <td>Dll1_Notch2</td>\n",
-       "      <td>SEC</td>\n",
-       "      <td>Erythroid</td>\n",
+       "      <th>78</th>\n",
+       "      <td>Angpt2_Tek|mut|Erythroidpro_Erythroidpro</td>\n",
+       "      <td>0.049821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2082</th>\n",
-       "      <td>147</td>\n",
-       "      <td>121</td>\n",
-       "      <td>0.050934</td>\n",
-       "      <td>Dll1_Notch2</td>\n",
-       "      <td>SEC</td>\n",
-       "      <td>Hepatocyte</td>\n",
+       "      <th>79</th>\n",
+       "      <td>Efnb2_Ephb4|mut|SEC_Hepatocyte</td>\n",
+       "      <td>0.117909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2083</th>\n",
-       "      <td>147</td>\n",
-       "      <td>122</td>\n",
-       "      <td>0.154981</td>\n",
-       "      <td>Dll1_Notch2</td>\n",
-       "      <td>SEC</td>\n",
-       "      <td>Erythroidpro</td>\n",
+       "      <th>80</th>\n",
+       "      <td>Dll4_Notch2|mut|SEC_Hepatocyte</td>\n",
+       "      <td>0.081639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2084 rows × 6 columns</p>\n",
+       "<p>81 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      source_cell_idx  receptor_cell_idx  likelihood ligand_recptor  \\\n",
-       "0                  11                 21    0.108347     Angpt1_Tek   \n",
-       "1                  11                 59    0.031968     Angpt1_Tek   \n",
-       "2                  11                 64    0.064517     Angpt1_Tek   \n",
-       "3                  16                 15    0.017489     Angpt1_Tek   \n",
-       "4                  16                 25    0.206867     Angpt1_Tek   \n",
-       "...               ...                ...         ...            ...   \n",
-       "2079              147                108    0.562622    Dll1_Notch2   \n",
-       "2080              147                109    0.072832    Dll1_Notch2   \n",
-       "2081              147                119    0.093348    Dll1_Notch2   \n",
-       "2082              147                121    0.050934    Dll1_Notch2   \n",
-       "2083              147                122    0.154981    Dll1_Notch2   \n",
+       "                                        label  ave_likelihood\n",
+       "0        Kitl_Kit|mut|Hepatocyte_Erythroidpro        0.139075\n",
+       "1     Jag2_Notch2|mut|Hepatocyte_Erythroidpro        0.254418\n",
+       "2     Dll4_Notch4|mut|Hepatocyte_Erythroidpro        0.119644\n",
+       "3      Angpt2_Tek|mut|Hepatocyte_Erythroidpro        0.043558\n",
+       "4      Jag1_Notch4|mut|Erythroidpro_Erythroid        0.032999\n",
+       "..                                        ...             ...\n",
+       "76  Jag1_Notch3|mut|Erythroidpro_Erythroidpro        0.068377\n",
+       "77     Kitl_Kit|mut|Erythroidpro_Erythroidpro        0.117084\n",
+       "78   Angpt2_Tek|mut|Erythroidpro_Erythroidpro        0.049821\n",
+       "79             Efnb2_Ephb4|mut|SEC_Hepatocyte        0.117909\n",
+       "80             Dll4_Notch2|mut|SEC_Hepatocyte        0.081639\n",
        "\n",
-       "     source_cell_type target_cell_type  \n",
-       "0          Hepatocyte     Erythroidpro  \n",
-       "1          Hepatocyte              SEC  \n",
-       "2          Hepatocyte              SEC  \n",
-       "3        Erythroidpro              SEC  \n",
-       "4        Erythroidpro        Erythroid  \n",
-       "...               ...              ...  \n",
-       "2079              SEC     Erythroidpro  \n",
-       "2080              SEC          Myeloid  \n",
-       "2081              SEC        Erythroid  \n",
-       "2082              SEC       Hepatocyte  \n",
-       "2083              SEC     Erythroidpro  \n",
-       "\n",
-       "[2084 rows x 6 columns]"
+       "[81 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### Check output\n",
     "summarized_ot = pd.read_csv(datap+'/example/test_output/ot/summary/mut_fov_9.ot.csv',sep='\\t',header=0)\n",
-    "ot_result"
+    "summarized_ot"
    ]
   },
   {
